AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(bproxy, 0.1, wvi@ucsc.cmb.ac.lk)

AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([alarm])

AC_OUTPUT(Makefile src/Makefile)
